--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#">Course</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Allumni</a></li>
-                <li><a href="#">Blog</a></li>
+                <li class=".blog"><a href="#">Blog</a></li>
             </ul>
         </nav>
         <div class="header wrapper">
@@ -34,10 +34,13 @@
             <h1>Welcome to Juno</h1>
             <div class="welcomeimage">
                 <img src="./assets/image-2.jpg" alt="">
-                <span>←   →</span>
+                <span class="leftarrow">←</span><span class="rightarrow">→</span>
             </div>
-            <p>Jan 1st, 2010</p>
-            <h3>Full-time Web development Immersive</h3>
+            <p>Jan 1st, 2019</p>
+            <div class="welcomeh3">
+                <h3>Full-time Web development Immersive</h3>
+                <span class="responsiveleftarrow">←</span><span class="responsiverightarrow">→</span>
+            </div>
         </section>
         <section class="wrapper">
             <ul class="informationboxes">
@@ -82,7 +85,7 @@
             <div class="footernav">
                 <img src="./assets/Juno-logo-white.png" alt="Juno Logo">
                 <h3>Juno Tech Test</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio nostrum animi, aliquam eveniet doloribus fugit.</p>
+                <p class="footertext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio nostrum animi, aliquam eveniet doloribus fugit.</p>
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Course</a></li>
@@ -90,20 +93,20 @@
                     <li><a href="#">Allumni</a></li>
                     <li><a href="#">Blog</a></li>
                 </ul>
-                <p>Ⓒ 2019-2019 Juno College of Technology</p>
+                <p>Ⓒ 2012-2019 Juno College of Technology</p>
             </div>
             <div class="mailinglist">
                 <form action="#" method="#" class="myForm" name="myForm">
                     <label for="yourEmail">Join our mailing list</label>
-                    <input type="email" id="yourEmail">
-                    <input type="submit">
+                    <input type="email" id="yourEmail" placeholder="Your email address">
+                    <button type="submit">Subscribe</button>
                 </form>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque.</p>
                 <ul>
-                    <li><i class="fab fa-facebook-f"></i></li>
-                    <li><i class="fab fa-twitter"></i></li>
-                    <li><i class="fab fa-instagram"></i></li>
-                    <li><i class="fab fa-github"></i></li>
+                    <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                    <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fab fa-github"></i></a></li>
                 </ul>
             </div>
         </nav>
